Add navigation and header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-ca"
 <head>
-  <title>Beetroot</head>
+  <title>Beetroot</title>
 </head>
+
 <body>
 
-  <!-- All the HTML content goes in here -->
-
   <header>
+    <nav>
+      <ul>
+        <li><a href="#">Chris Pratt</a></li>
+        <li><a href="#">Common Receipts</a></li>
+      <ul>
+    </nav>
     <h1>The Wonderful Plant Known as Beetroot</h1>
   </header>
+
+  <main>
+    <p>Beets are not a yummy food. Chris Pratt, however loves them.</p>
