Fix and add Banner

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Chris Pratt</a></li>
-        <li><a href="#">Common Receipts</a></li>
+        <li>Chris Pratt</li>
+        <li>Common Receipts</li>
       <ul>
     </nav>
     <h1>The Wonderful Plant Known as Beetroot</h1>
+    <img src="images/"banner.svg" alt="">
   </header>
 
   <main>
     <p>Beets are not a yummy food. Chris Pratt, however loves them.</p>
+    <
