--- a/index.html
+++ b/index.html
@@ -1,22 +1,4 @@
 <!DOCTYPE html>
-<html lang="en-ca"
+<html lang="en-ca">
 <head>
-  <title>Beetroot</title>
-</head>
-
-<body>
-
-  <header>
-    <nav>
-      <ul>
-        <li>Chris Pratt</li>
-        <li>Common Receipts</li>
-      <ul>
-    </nav>
-    <h1>The Wonderful Plant Known as Beetroot</h1>
-    <img src="images/"banner.svg" alt="">
-  </header>
-
-  <main>
-    <p>Beets are not a yummy food. Chris Pratt, however loves them.</p>
-    <
+  <img src="images/logo.svg" </img>
