Add title and header

--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
 <html lang="en-ca">
 <head>
   <img src="images/logo.svg" </img>
+  <title>The Solar System</title>
+</head>
+<body>
+  <header>
+    <h1>
