Adds logo and list

--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <img src="images/logo.svg" </img>
+  <img src="{images/logo.svg}"</img>
   <title>The Solar System</title>
 </head>
 <body>
   <header>
-    <h1>
+    <h1>In The Solar System</h1>
+  </header>
+
+  <main>
+    <ul>
+      <li>[Stars]</li>
+      <li>[Terrestrial planets]</li>
+      <li>[Dwarf planets]</li>
+      <li>[Asteroids]</li>
+      <li>[Comets]</li>
+    </ul>
+
+    ---
+
+    <img scr="{images/banner.svg}" </img>
+
+    ---
+
+    <p>The Solar System is the
