--- a/index.html
+++ b/index.html
@@ -24,4 +24,7 @@
 
     ---
 
-    <p>The Solar System is the
+    <p>The Solar System is the gravitationally bound system comprising the sun and the planetary system that orbits it.</p>
+  </main>
+
+</body>
