Fixes pervious issues

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <img src="{images/logo.svg}"</img>
   <title>The Solar System</title>
+  <img src="images/logo.svg" alt="logo">
 </head>
 <body>
   <header>
@@ -20,7 +20,7 @@
 
     ---
 
-    <img scr="{images/banner.svg}" </img>
+    <img scr="images/banner.svg" alt="banner">
 
     ---
 
