Fix the problems

--- a/index.html
+++ b/index.html
@@ -5,26 +5,22 @@
   <img src="images/logo.svg" alt="logo">
 </head>
 <body>
+
   <header>
     <h1>In The Solar System</h1>
   </header>
 
   <main>
     <ul>
-      <li>[Stars]</li>
-      <li>[Terrestrial planets]</li>
-      <li>[Dwarf planets]</li>
-      <li>[Asteroids]</li>
-      <li>[Comets]</li>
+      <li>Stars</li>
+      <li>Terrestrial planets</li>
+      <li>Dwarf planets</li>
+      <li>Asteroids</li>
+      <li>Comets</li>
     </ul>
-
-    ---
-
-    <img scr="images/banner.svg" alt="banner">
-
-    ---
-
-    <p>The Solar System is the gravitationally bound system comprising the sun and the planetary system that orbits it.</p>
   </main>
+
+    <img src="images/banner.svg" alt="logo">
+    <p>The Solar System is the gravitationally bound system comprising the sun and the planetary system that orbits it.</p>
 
 </body>
