Fix more Problems

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <title>The Solar System</title>
   <img src="images/logo.svg" alt="logo">
-</head>
-<body>
 
+---
+
+<body>
   <header>
     <h1>In The Solar System</h1>
   </header>
@@ -25,3 +26,4 @@
     <p>The Solar System is the gravitationally bound system comprising the sun and the planetary system that orbits it.</p>
 
 </body>
+</html>
