Fix issues in coding

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
+  <meta charset="utf-8">
   <title>The Solar System</title>
-  <img src="images/logo.svg" alt="logo">
-
----
-
-
+  <meta name="viewport" content="width=device-width,initial-scale=2">
   <header>
     <h1>In The Solar System</h1>
   </header>
 
----
+<body>
+<!-- All the HTML content goes in here -->
 
   <main>
+    <img src="images/logo.svg" alt="logo">
     <ul>
       <li>Stars</li>
       <li>Terrestrial planets</li>
@@ -22,9 +21,9 @@
       <li>Comets</li>
       <li>Gas giants</li>
     </ul>
-  </main>
-
     <img src="images/banner.svg" alt="logo">
     <p>The Solar System is the gravitationally bound system comprising the sun and the planetary system that orbits it.</p>
+  </main>
 
+</body>
 </html>
