fix everything wrong

--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
   <meta charset="utf-8">
   <title>The Solar System</title>
   <meta name="viewport" content="width=device-width,initial-scale=2">
-  <header>
-    <h1>In The Solar System</h1>
-  </header>
+</head>
 
 <body>
-<!-- All the HTML content goes in here -->
+  <!-- All the HTML content goes in here -->
+  <header>
+
+    <figure>
+      <img src="images/logo.svg" alt="logo">
+      <figcaption>
+        <h1>In the Solor System</h1>
+      </figcaption>
+    </figure>
+    <nav>
+      <ul>
+        <li><a href="#">Planets</a></li>
+        <li><a href="#">Stars</a></li>
+        <li><a href="#">Comets</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
-    <img src="images/logo.svg" alt="logo">
     <ul>
       <li>Stars</li>
       <li>Terrestrial planets</li>
